parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     declist -> declist dec
Rule 3     declist -> <empty>
Rule 4     dec -> vardec
Rule 5     dec -> funcdec
Rule 6     type -> INTEGER
Rule 7     type -> FLOAT
Rule 8     type -> BOOLEAN
Rule 9     iddec -> ID
Rule 10    iddec -> ID LSB exp RSB
Rule 11    iddec -> ID ASSIGN exp
Rule 12    idlist -> iddec
Rule 13    idlist -> idlist COMMA iddec
Rule 14    vardec -> type idlist SEMICOLON
Rule 15    funcdec -> type ID LRB paramdecs RRB block
Rule 16    funcdec -> VOID ID LRB paramdecs RRB block
Rule 17    paramdecs -> paramdecslist
Rule 18    paramdecs -> <empty>
Rule 19    paramdecslist -> paramdec
Rule 20    paramdecslist -> paramdecslist COMMA paramdec
Rule 21    paramdec -> type ID
Rule 22    paramdec -> type ID LSB RSB
Rule 23    varlist -> vardec varlist
Rule 24    varlist -> <empty>
Rule 25    block -> LCB varlist stmtlist RCB
Rule 26    stmtlist -> stmtlist stmt
Rule 27    stmtlist -> <empty>
Rule 28    lvalue -> ID
Rule 29    lvalue -> ID LSB exp RSB
Rule 30    stmt -> RETURN exp SEMICOLON
Rule 31    stmt -> exp SEMICOLON
Rule 32    stmt -> block
Rule 33    stmt -> WHILE LRB exp RRB stmt
Rule 34    stmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 35    stmt -> IF LRB exp RRB stmt elseiflist other
Rule 36    stmt -> PRINT LRB ID RRB SEMICOLON
Rule 37    other -> ELSE stmt
Rule 38    other -> <empty>
Rule 39    elseiflist -> elseiflist ELIF LRB exp RRB stmt
Rule 40    elseiflist -> <empty>
Rule 41    exp -> lvalue ASSIGN exp
Rule 42    exp -> exp operator exp
Rule 43    exp -> exp relop exp
Rule 44    exp -> const
Rule 45    exp -> lvalue
Rule 46    exp -> ID LRB explist RRB
Rule 47    exp -> LRB exp RRB
Rule 48    exp -> ID LRB RRB
Rule 49    exp -> SUB exp
Rule 50    exp -> NOT exp
Rule 51    operator -> OR
Rule 52    operator -> AND
Rule 53    operator -> SUM
Rule 54    operator -> SUB
Rule 55    operator -> MUL
Rule 56    operator -> DIV
Rule 57    operator -> MOD
Rule 58    const -> INTEGERNUMBER
Rule 59    const -> FLOATNUMBER
Rule 60    const -> TRUE
Rule 61    const -> FALSE
Rule 62    relop -> GT
Rule 63    relop -> LT
Rule 64    relop -> NE
Rule 65    relop -> EQ
Rule 66    relop -> GE
Rule 67    relop -> LE
Rule 68    explist -> exp
Rule 69    explist -> explist COMMA exp

Terminals, with rules where they appear

AND                  : 52
ASSIGN               : 11 41
BOOLEAN              : 8
COMMA                : 13 20 69
DIV                  : 56
ELIF                 : 39
ELSE                 : 37
EQ                   : 65
ERROR                : 
FALSE                : 61
FLOAT                : 7
FLOATNUMBER          : 59
FOR                  : 34
GE                   : 66
GT                   : 62
ID                   : 9 10 11 15 16 21 22 28 29 36 46 48
IF                   : 35
INTEGER              : 6
INTEGERNUMBER        : 58
LCB                  : 25
LE                   : 67
LRB                  : 1 15 16 33 34 35 36 39 46 47 48
LSB                  : 10 22 29
LT                   : 63
MAIN                 : 1
MOD                  : 57
MUL                  : 55
NE                   : 64
NOT                  : 50
OR                   : 51
PRINT                : 36
RCB                  : 25
RETURN               : 30
RRB                  : 1 15 16 33 34 35 36 39 46 47 48
RSB                  : 10 22 29
SEMICOLON            : 14 30 31 34 34 36
SUB                  : 49 54
SUM                  : 53
TRUE                 : 60
VOID                 : 16
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

block                : 1 15 16 32
const                : 44
dec                  : 2
declist              : 1 2
elseiflist           : 35 39
exp                  : 10 11 29 30 31 33 34 34 34 35 39 41 42 42 43 43 47 49 50 68 69
explist              : 46 69
funcdec              : 5
iddec                : 12 13
idlist               : 13 14
lvalue               : 41 45
operator             : 42
other                : 35
paramdec             : 19 20
paramdecs            : 15 16
paramdecslist        : 17 20
program              : 0
relop                : 43
stmt                 : 26 33 34 35 37 39
stmtlist             : 25 26
type                 : 14 15 21 22
vardec               : 4 23
varlist              : 23 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) declist -> . declist dec
    (3) declist -> .

    MAIN            reduce using rule 3 (declist -> .)
    VOID            reduce using rule 3 (declist -> .)
    INTEGER         reduce using rule 3 (declist -> .)
    FLOAT           reduce using rule 3 (declist -> .)
    BOOLEAN         reduce using rule 3 (declist -> .)

    program                        shift and go to state 1
    declist                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (2) declist -> declist . dec
    (4) dec -> . vardec
    (5) dec -> . funcdec
    (14) vardec -> . type idlist SEMICOLON
    (15) funcdec -> . type ID LRB paramdecs RRB block
    (16) funcdec -> . VOID ID LRB paramdecs RRB block
    (6) type -> . INTEGER
    (7) type -> . FLOAT
    (8) type -> . BOOLEAN

    MAIN            shift and go to state 3
    VOID            shift and go to state 8
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    dec                            shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    type                           shift and go to state 7

state 3

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 12


state 4

    (2) declist -> declist dec .

    MAIN            reduce using rule 2 (declist -> declist dec .)
    VOID            reduce using rule 2 (declist -> declist dec .)
    INTEGER         reduce using rule 2 (declist -> declist dec .)
    FLOAT           reduce using rule 2 (declist -> declist dec .)
    BOOLEAN         reduce using rule 2 (declist -> declist dec .)


state 5

    (4) dec -> vardec .

    MAIN            reduce using rule 4 (dec -> vardec .)
    VOID            reduce using rule 4 (dec -> vardec .)
    INTEGER         reduce using rule 4 (dec -> vardec .)
    FLOAT           reduce using rule 4 (dec -> vardec .)
    BOOLEAN         reduce using rule 4 (dec -> vardec .)


state 6

    (5) dec -> funcdec .

    MAIN            reduce using rule 5 (dec -> funcdec .)
    VOID            reduce using rule 5 (dec -> funcdec .)
    INTEGER         reduce using rule 5 (dec -> funcdec .)
    FLOAT           reduce using rule 5 (dec -> funcdec .)
    BOOLEAN         reduce using rule 5 (dec -> funcdec .)


state 7

    (14) vardec -> type . idlist SEMICOLON
    (15) funcdec -> type . ID LRB paramdecs RRB block
    (12) idlist -> . iddec
    (13) idlist -> . idlist COMMA iddec
    (9) iddec -> . ID
    (10) iddec -> . ID LSB exp RSB
    (11) iddec -> . ID ASSIGN exp

    ID              shift and go to state 14

    idlist                         shift and go to state 13
    iddec                          shift and go to state 15

state 8

    (16) funcdec -> VOID . ID LRB paramdecs RRB block

    ID              shift and go to state 16


state 9

    (6) type -> INTEGER .

    ID              reduce using rule 6 (type -> INTEGER .)


state 10

    (7) type -> FLOAT .

    ID              reduce using rule 7 (type -> FLOAT .)


state 11

    (8) type -> BOOLEAN .

    ID              reduce using rule 8 (type -> BOOLEAN .)


state 12

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 17


state 13

    (14) vardec -> type idlist . SEMICOLON
    (13) idlist -> idlist . COMMA iddec

    SEMICOLON       shift and go to state 18
    COMMA           shift and go to state 19


state 14

    (15) funcdec -> type ID . LRB paramdecs RRB block
    (9) iddec -> ID .
    (10) iddec -> ID . LSB exp RSB
    (11) iddec -> ID . ASSIGN exp

    LRB             shift and go to state 20
    SEMICOLON       reduce using rule 9 (iddec -> ID .)
    COMMA           reduce using rule 9 (iddec -> ID .)
    LSB             shift and go to state 21
    ASSIGN          shift and go to state 22


state 15

    (12) idlist -> iddec .

    SEMICOLON       reduce using rule 12 (idlist -> iddec .)
    COMMA           reduce using rule 12 (idlist -> iddec .)


state 16

    (16) funcdec -> VOID ID . LRB paramdecs RRB block

    LRB             shift and go to state 23


state 17

    (1) program -> declist MAIN LRB RRB . block
    (25) block -> . LCB varlist stmtlist RCB

    LCB             shift and go to state 25

    block                          shift and go to state 24

state 18

    (14) vardec -> type idlist SEMICOLON .

    MAIN            reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    VOID            reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    INTEGER         reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    FLOAT           reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    BOOLEAN         reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    RCB             reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    RETURN          reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    WHILE           reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    FOR             reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    IF              reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    PRINT           reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    ID              reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    LRB             reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    SUB             reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    NOT             reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    LCB             reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    INTEGERNUMBER   reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    FLOATNUMBER     reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    TRUE            reduce using rule 14 (vardec -> type idlist SEMICOLON .)
    FALSE           reduce using rule 14 (vardec -> type idlist SEMICOLON .)


state 19

    (13) idlist -> idlist COMMA . iddec
    (9) iddec -> . ID
    (10) iddec -> . ID LSB exp RSB
    (11) iddec -> . ID ASSIGN exp

    ID              shift and go to state 27

    iddec                          shift and go to state 26

state 20

    (15) funcdec -> type ID LRB . paramdecs RRB block
    (17) paramdecs -> . paramdecslist
    (18) paramdecs -> .
    (19) paramdecslist -> . paramdec
    (20) paramdecslist -> . paramdecslist COMMA paramdec
    (21) paramdec -> . type ID
    (22) paramdec -> . type ID LSB RSB
    (6) type -> . INTEGER
    (7) type -> . FLOAT
    (8) type -> . BOOLEAN

    RRB             reduce using rule 18 (paramdecs -> .)
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    type                           shift and go to state 28
    paramdecs                      shift and go to state 29
    paramdecslist                  shift and go to state 30
    paramdec                       shift and go to state 31

state 21

    (10) iddec -> ID LSB . exp RSB
    (41) exp -> . lvalue ASSIGN exp
    (42) exp -> . exp operator exp
    (43) exp -> . exp relop exp
    (44) exp -> . const
    (45) exp -> . lvalue
    (46) exp -> . ID LRB explist RRB
    (47) exp -> . LRB exp RRB
    (48) exp -> . ID LRB RRB
    (49) exp -> . SUB exp
    (50) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (58) const -> . INTEGERNUMBER
    (59) const -> . FLOATNUMBER
    (60) const -> . TRUE
    (61) const -> . FALSE

    ID              shift and go to state 32
    LRB             shift and go to state 36
    SUB             shift and go to state 37
    NOT             shift and go to state 38
    INTEGERNUMBER   shift and go to state 39
    FLOATNUMBER     shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42

    exp                            shift and go to state 33
    lvalue                         shift and go to state 34
    const                          shift and go to state 35

state 22

    (11) iddec -> ID ASSIGN . exp
    (41) exp -> . lvalue ASSIGN exp
    (42) exp -> . exp operator exp
    (43) exp -> . exp relop exp
    (44) exp -> . const
    (45) exp -> . lvalue
    (46) exp -> . ID LRB explist RRB
    (47) exp -> . LRB exp RRB
    (48) exp -> . ID LRB RRB
    (49) exp -> . SUB exp
    (50) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (58) const -> . INTEGERNUMBER
    (59) const -> . FLOATNUMBER
    (60) const -> . TRUE
    (61) const -> . FALSE

    ID              shift and go to state 32
    LRB             shift and go to state 36
    SUB             shift and go to state 37
    NOT             shift and go to state 38
    INTEGERNUMBER   shift and go to state 39
    FLOATNUMBER     shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42

    exp                            shift and go to state 43
    lvalue                         shift and go to state 34
    const                          shift and go to state 35

state 23

    (16) funcdec -> VOID ID LRB . paramdecs RRB block
    (17) paramdecs -> . paramdecslist
    (18) paramdecs -> .
    (19) paramdecslist -> . paramdec
    (20) paramdecslist -> . paramdecslist COMMA paramdec
    (21) paramdec -> . type ID
    (22) paramdec -> . type ID LSB RSB
    (6) type -> . INTEGER
    (7) type -> . FLOAT
    (8) type -> . BOOLEAN

    RRB             reduce using rule 18 (paramdecs -> .)
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    paramdecs                      shift and go to state 44
    paramdecslist                  shift and go to state 30
    paramdec                       shift and go to state 31
    type                           shift and go to state 28

state 24

    (1) program -> declist MAIN LRB RRB block .

    $end            reduce using rule 1 (program -> declist MAIN LRB RRB block .)


state 25

    (25) block -> LCB . varlist stmtlist RCB
    (23) varlist -> . vardec varlist
    (24) varlist -> .
    (14) vardec -> . type idlist SEMICOLON
    (6) type -> . INTEGER
    (7) type -> . FLOAT
    (8) type -> . BOOLEAN

    RCB             reduce using rule 24 (varlist -> .)
    RETURN          reduce using rule 24 (varlist -> .)
    WHILE           reduce using rule 24 (varlist -> .)
    FOR             reduce using rule 24 (varlist -> .)
    IF              reduce using rule 24 (varlist -> .)
    PRINT           reduce using rule 24 (varlist -> .)
    ID              reduce using rule 24 (varlist -> .)
    LRB             reduce using rule 24 (varlist -> .)
    SUB             reduce using rule 24 (varlist -> .)
    NOT             reduce using rule 24 (varlist -> .)
    LCB             reduce using rule 24 (varlist -> .)
    INTEGERNUMBER   reduce using rule 24 (varlist -> .)
    FLOATNUMBER     reduce using rule 24 (varlist -> .)
    TRUE            reduce using rule 24 (varlist -> .)
    FALSE           reduce using rule 24 (varlist -> .)
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    varlist                        shift and go to state 45
    vardec                         shift and go to state 46
    type                           shift and go to state 47

state 26

    (13) idlist -> idlist COMMA iddec .

    SEMICOLON       reduce using rule 13 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 13 (idlist -> idlist COMMA iddec .)


state 27

    (9) iddec -> ID .
    (10) iddec -> ID . LSB exp RSB
    (11) iddec -> ID . ASSIGN exp

    SEMICOLON       reduce using rule 9 (iddec -> ID .)
    COMMA           reduce using rule 9 (iddec -> ID .)
    LSB             shift and go to state 21
    ASSIGN          shift and go to state 22


state 28

    (21) paramdec -> type . ID
    (22) paramdec -> type . ID LSB RSB

    ID              shift and go to state 48


state 29

    (15) funcdec -> type ID LRB paramdecs . RRB block

    RRB             shift and go to state 49


state 30

    (17) paramdecs -> paramdecslist .
    (20) paramdecslist -> paramdecslist . COMMA paramdec

    RRB             reduce using rule 17 (paramdecs -> paramdecslist .)
    COMMA           shift and go to state 50


state 31

    (19) paramdecslist -> paramdec .

    COMMA           reduce using rule 19 (paramdecslist -> paramdec .)
    RRB             reduce using rule 19 (paramdecslist -> paramdec .)


state 32

    (46) exp -> ID . LRB explist RRB
    (48) exp -> ID . LRB RRB
    (28) lvalue -> ID .
    (29) lvalue -> ID . LSB exp RSB

    LRB             shift and go to state 51
    ASSIGN          reduce using rule 28 (lvalue -> ID .)
    RSB             reduce using rule 28 (lvalue -> ID .)
    OR              reduce using rule 28 (lvalue -> ID .)
    AND             reduce using rule 28 (lvalue -> ID .)
    SUM             reduce using rule 28 (lvalue -> ID .)
    SUB             reduce using rule 28 (lvalue -> ID .)
    MUL             reduce using rule 28 (lvalue -> ID .)
    DIV             reduce using rule 28 (lvalue -> ID .)
    MOD             reduce using rule 28 (lvalue -> ID .)
    GT              reduce using rule 28 (lvalue -> ID .)
    LT              reduce using rule 28 (lvalue -> ID .)
    NE              reduce using rule 28 (lvalue -> ID .)
    EQ              reduce using rule 28 (lvalue -> ID .)
    GE              reduce using rule 28 (lvalue -> ID .)
    LE              reduce using rule 28 (lvalue -> ID .)
    SEMICOLON       reduce using rule 28 (lvalue -> ID .)
    COMMA           reduce using rule 28 (lvalue -> ID .)
    RRB             reduce using rule 28 (lvalue -> ID .)
    LSB             shift and go to state 52


state 33

    (10) iddec -> ID LSB exp . RSB
    (42) exp -> exp . operator exp
    (43) exp -> exp . relop exp
    (51) operator -> . OR
    (52) operator -> . AND
    (53) operator -> . SUM
    (54) operator -> . SUB
    (55) operator -> . MUL
    (56) operator -> . DIV
    (57) operator -> . MOD
    (62) relop -> . GT
    (63) relop -> . LT
    (64) relop -> . NE
    (65) relop -> . EQ
    (66) relop -> . GE
    (67) relop -> . LE

    RSB             shift and go to state 53
    OR              shift and go to state 56
    AND             shift and go to state 57
    SUM             shift and go to state 58
    SUB             shift and go to state 59
    MUL             shift and go to state 60
    DIV             shift and go to state 61
    MOD             shift and go to state 62
    GT              shift and go to state 63
    LT              shift and go to state 64
    NE              shift and go to state 65
    EQ              shift and go to state 66
    GE              shift and go to state 67
    LE              shift and go to state 68

    operator                       shift and go to state 54
    relop                          shift and go to state 55

state 34

    (41) exp -> lvalue . ASSIGN exp
    (45) exp -> lvalue .

    ASSIGN          shift and go to state 69
    RSB             reduce using rule 45 (exp -> lvalue .)
    OR              reduce using rule 45 (exp -> lvalue .)
    AND             reduce using rule 45 (exp -> lvalue .)
    SUM             reduce using rule 45 (exp -> lvalue .)
    SUB             reduce using rule 45 (exp -> lvalue .)
    MUL             reduce using rule 45 (exp -> lvalue .)
    DIV             reduce using rule 45 (exp -> lvalue .)
    MOD             reduce using rule 45 (exp -> lvalue .)
    GT              reduce using rule 45 (exp -> lvalue .)
    LT              reduce using rule 45 (exp -> lvalue .)
    NE              reduce using rule 45 (exp -> lvalue .)
    EQ              reduce using rule 45 (exp -> lvalue .)
    GE              reduce using rule 45 (exp -> lvalue .)
    LE              reduce using rule 45 (exp -> lvalue .)
    SEMICOLON       reduce using rule 45 (exp -> lvalue .)
    COMMA           reduce using rule 45 (exp -> lvalue .)
    RRB             reduce using rule 45 (exp -> lvalue .)


state 35

    (44) exp -> const .

    RSB             reduce using rule 44 (exp -> const .)
    OR              reduce using rule 44 (exp -> const .)
    AND             reduce using rule 44 (exp -> const .)
    SUM             reduce using rule 44 (exp -> const .)
    SUB             reduce using rule 44 (exp -> const .)
    MUL             reduce using rule 44 (exp -> const .)
    DIV             reduce using rule 44 (exp -> const .)
    MOD             reduce using rule 44 (exp -> const .)
    GT              reduce using rule 44 (exp -> const .)
    LT              reduce using rule 44 (exp -> const .)
    NE              reduce using rule 44 (exp -> const .)
    EQ              reduce using rule 44 (exp -> const .)
    GE              reduce using rule 44 (exp -> const .)
    LE              reduce using rule 44 (exp -> const .)
    SEMICOLON       reduce using rule 44 (exp -> const .)
    COMMA           reduce using rule 44 (exp -> const .)
    RRB             reduce using rule 44 (exp -> const .)


state 36

    (47) exp -> LRB . exp RRB
    (41) exp -> . lvalue ASSIGN exp
    (42) exp -> . exp operator exp
    (43) exp -> . exp relop exp
    (44) exp -> . const
    (45) exp -> . lvalue
    (46) exp -> . ID LRB explist RRB
    (47) exp -> . LRB exp RRB
    (48) exp -> . ID LRB RRB
    (49) exp -> . SUB exp
    (50) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (58) const -> . INTEGERNUMBER
    (59) const -> . FLOATNUMBER
    (60) const -> . TRUE
    (61) const -> . FALSE

    ID              shift and go to state 32
    LRB             shift and go to state 36
    SUB             shift and go to state 37
    NOT             shift and go to state 38
    INTEGERNUMBER   shift and go to state 39
    FLOATNUMBER     shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42

    exp                            shift and go to state 70
    lvalue                         shift and go to state 34
    const                          shift and go to state 35

state 37

    (49) exp -> SUB . exp
    (41) exp -> . lvalue ASSIGN exp
    (42) exp -> . exp operator exp
    (43) exp -> . exp relop exp
    (44) exp -> . const
    (45) exp -> . lvalue
    (46) exp -> . ID LRB explist RRB
    (47) exp -> . LRB exp RRB
    (48) exp -> . ID LRB RRB
    (49) exp -> . SUB exp
    (50) exp -> . NOT exp
    (28) lvalue -> . ID
    (29) lvalue -> . ID LSB exp RSB
    (58) const -> . INTEGERNUMBER
    (59) const -> . FLOATNUMBER
    (60) const -> . TRUE
    (61) const -> . FALSE
